# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: pyci.yaml
page_analyzer/: app.py  database.py  db.py  db_functions.py  parser.py  url_normalizer.py  urls.py  urls_functions.py
page_analyzer/templates/: base.html  index.html  url.html  url_detail.html  urls.html
